--- a/portfolio.html
+++ b/portfolio.html
@@ -29,46 +29,101 @@
 
 	<body>
 		<!--Шапка-->
-	<header class="header">
-		<div class="header__container container">
-			<nav class="header__site-nav">
-				<a class="header__logo logo" href="./index.html">
-					Web<span class="logo--black">Studio</span>
-				</a>
-				<ul class="header-nav">
-					<li class="header-nav__item">
-						<a class="header-nav__link  "
-							href="./index.html">Студия</a>
+		<header class="header">
+			<div class="header__container container">
+				<nav class="header__site-nav">
+					<a class="header__logo logo" href="./index.html">
+						Web<span class="logo--black">Studio</span>
+					</a>
+					<ul class="header-nav">
+						<li class="header-nav__item">
+							<a class="header-nav__link  " href="./index.html">Студия</a>
+						</li>
+						<li class="header-nav__item">
+							<a class="header-nav__link nav-link nav-link--current nav-link--active" href="./portfolio.html">Портфолио</a>
+						</li>
+						<li class="header-nav__item">
+							<a class="header-nav__link" href="#">Контакты</a>
+						</li>
+					</ul>
+				</nav>
+
+				<ul class="header-contacts">
+					<li class="header-contacts__item">
+						<a class="header-contacts__link " href="mailto:info@devstudio.com">
+							<svg class="header-contacts__icons" width="16" height="12">
+								<use href="./images/icons.svg#envelope"></use>
+							</svg>
+							info@devstudio.com
+						</a>
 					</li>
-					<li class="header-nav__item">
-						<a class="header-nav__link nav-link nav-link--current nav-link--active" href="./portfolio.html">Портфолио</a>
-					</li>
-					<li class="header-nav__item">
-						<a class="header-nav__link" href="#">Контакты</a>
+					<li class="header-contacts__item">
+						<a class=" header-contacts__link " href="tel:+380961111111">
+							<svg class="header-contacts__icons" width="10" height="16">
+								<use href="./images/icons.svg#smartphone"></use>
+							</svg>
+							+38 096 111 11 11
+						</a>
 					</li>
 				</ul>
-			</nav>
-	
-			<ul class="header-contacts">
-				<li class="header-contacts__item">
-					<a class="header-contacts__link " href="mailto:info@devstudio.com">
-						<svg class="header-contacts__icons" width="16" height="12">
-							<use href="./images/icons.svg#envelope"></use>
+				<button type="button" class="header-menu-btn" data-open-menu >
+					<svg class="header-menu-btn__icon" width="24" height="16">
+						<use href="./images/icons.svg#icon-menu"></use>
+					</svg>
+				</button>
+				<div class="mob-menu mob-menu--relative is-hidden" data-mob-menu >
+					
+					<button type="button" class="close-menu-btn" data-close-menu>
+						<svg class="close-menu-btn__icon" width="18" height="18">
+							<use href="./images/icons.svg#vector"></use>
 						</svg>
-						info@devstudio.com
-					</a>
-				</li>
-				<li class="header-contacts__item">
-					<a class=" header-contacts__link " href="tel:+380961111111">
-						<svg class="header-contacts__icons" width="10" height="16">
-							<use href="./images/icons.svg#smartphone"></use>
-						</svg>
+					</button>
+
+					<ul class="mob-menu-list">
+					<li class="mob-menu-list__item">
+						<a class="mob-menu-list__link mob-menu-active" href="./index.html">Студия</a>
+					</li>
+					<li class="mob-menu-list__item">
+						<a class="mob-menu-list__link" href="./portfolio.html">Портфолио</a>
+					</li>
+					<li class="mob-menu-list__item">
+						<a class="mob-menu-list__link" href="#">Контакты</a>
+					</li>
+					</ul>
+					<div class="mob-menu-connect">
+					<a class=" mob-menu-tel mob-menu-tel--indent" href="tel:+380961111111">
 						+38 096 111 11 11
 					</a>
-				</li>
-			</ul>
-		</div>
-	</header>
+					<a class="mob-menu-mail mob-menu-mail--indent" href="mailto:info@devstudio.com">						
+						info@devstudio.com
+					</a>
+					<ul class="mob-social-list">
+                        <li class="mob-social-list__item">
+							<a href="#" class="mob-social-list__link social-dash social-dash--indent">
+							Instagram
+							</a>
+						</li>
+						<li class="mob-social-list__item">
+							<a href="#" class="mob-social-list__link social-dash">
+							Twitter
+							</a>
+						</li>
+						<li class="mob-social-list__item">
+							<a href="#" class="mob-social-list__link social-dash">
+							Facebook
+							</a>
+						</li>
+						<li class="mob-social-list__item">
+							<a href="#" class="mob-social-list__link">
+							LinkedIn
+							</a>
+						</li>
+					</ul>
+					</div>
+					
+				</div>
+			</div>
+		</header>
 	
 		<main>
 			<!--Меню Портфолио-->
@@ -370,5 +425,6 @@
 				</form>
 			</div>
 		</footer>
+		<script src="./js/menu.js"></script>
 	</body>
 </html>
