--- a/index.html
+++ b/index.html
@@ -120,16 +120,16 @@
 			</div>
 		</header>
 
-		<!--<main>-->
+		<main>
 			<!-- Герой-->
-			<!--<section class="hero hero--indent">
+			<section class="hero hero--indent">
 				<div class="container hero__container">
 					<h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
 					<button class="hero__button" type="button" data-modal-open>Заказать услугу</button>
 				</div>
-			</section>-->
+			</section>
 			<!--Особенности -->
-			<!--<section class="features section">
+			<section class="features section">
 				<div class="container">
 					<h2 class="visually-hidden">Особенности компании</h2>
 					<ul class="features-list">
@@ -175,7 +175,7 @@
 						</li>
 					</ul>
 					</div>
-					</section>-->
+					</section>
 					<!-- Блок чем занимаемся -->
 					<!--<section class="about">
 						<div class="container">
