--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 					</div>
 					</section>
 					<!-- Блок чем занимаемся -->
-					<!--<section class="about">
+					<section class="about">
 						<div class="container">
 
 					<h2 class="about__title">Чем мы занимаемся</h2>
@@ -185,9 +185,11 @@
 					<ul class="about-list">
 						<li class="about-list__item">
 							<div class="about-list__content">
+								
 								<img 
-								src="./images/section2/img4" 
-								alt="на компютере пишут код" 
+								srcset="./images/about/desktop-applications-1x.jpg 1x, ./images/about/desktop-applications-2x.jpg 2x"
+								src="./images/about/desktop-application-1x.jpg" 
+								alt="десктопное приложения" 
 								width="370" 
 								height="294"
 								/>
@@ -197,8 +199,9 @@
 						<li class="about-list__item">
 							<div class="about-list__content">
 								<img
-									src="./images/section2/img5"
-									alt="на компютере избражено мобильные приложения"
+								    srcset="./images/about/mob-applications-1x.jpg 1x, ./images/about/mob-applications-2x.jpg 2x"
+									src="./images/about/mob-applications-1x.jpg"
+									alt="мобильные приложения"
 									width="370"
 									height="294"
 								/>
@@ -208,7 +211,8 @@
 						<li class="about-list__item">
 							<div class="about-list__content">
 								<img 
-								src="./images/section2/img6" 
+								srcset="./images/about/design-solutions-1x.jpg 1x, ./images/about/design-solutions-2x.jpg 2x"
+								src="./images/about/design-solutions-1x.jpg" 
 								alt="на планшете изображена фигура" 
 								width="370" 
 								height="294"
@@ -219,16 +223,20 @@
 					</ul>
 					</div>
 				
-				</section>-->
+				</section>
 			
 
 			<!-- Блок Наша команда -->
-			<!--<section class="team section">
+			<section class="team section">
 				<div class="container">
 					<h2 class="team__title">Наша команда</h2>
 					<ul class="team-list">
 						<li class="team-list__item">
-							<img src="./images/section3/img.jpg" alt="Игорь Демьяненко" width="270" height="260" />
+							<img 
+							srcset="./images/team/demyanenko-1x.jpg 1x, ./images/team/demyanenko-2x.jpg 2x"
+							src="./images/team/demyanenko-1x.jpg" 
+							alt="Игорь Демьяненко" 
+							sizes="(min-width: 1200px) 25vw, (min-width: 768px) 50vw, 100vw"/>
 							<div>
 								<h3 class="team-list__subtitle">Игорь Демьяненко</h3>
 								<p lang="en" class="team-list__text">Product Designer</p>
@@ -267,7 +275,11 @@
 							</div>
 						</li>
 						<li class="team-list__item">
-							<img src="./images/section3/img1" alt="Ольга Репина" width="270" height="260" />
+							<img 
+							srcset="./images/team/repina-1x.jpg 1x, ./images/team/repina-2x.jpg 2x"
+							src="./images/team/repina-1x.jpg" 
+							alt="Ольга Репина" 
+							sizes="(min-width: 1200px) 25vw, (min-width: 768px) 50vw, 100vw"/>
 							<div>
 								<h3 class="team-list__subtitle">Ольга Репина</h3>
 								<p lang="en" class="team-list__text">Frontend Developer</p>
@@ -306,7 +318,11 @@
 							</div>
 						</li>
 						<li class="team-list__item">
-							<img src="./images/section3/img2" alt="Николай Тарасов" width="270" height="260" />
+							<img 
+							srcset="./images/team/tarasov-1x.jpg 1x, ./images/team/tarasov-2x.jpg 2x" 
+							src="./images/team/tarasov-1x.jpg" 
+							alt="Николай Тарасов" 
+							sizes="(min-width: 1200px) 25vw, (min-width: 768px) 50vw, 100vw"/>
 							<div>
 								<h3 class="team-list__subtitle">Николай Тарасов</h3>
 								<p lang="en" class="team-list__text">Marketing</p>
@@ -345,7 +361,12 @@
 							</div>
 						</li>
 						<li class="team-list__item">
-							<img src="./images/section3/img3" alt="Михаил Ермаков" width="270" height="260" />
+							<img 
+							srcset="./images/team/ermakov-1x.jpg 1x, ./images/team/ermakov-2x.jpg 2x"
+							src="./images/team/ermakov-1x.jpg" 
+							alt="Михаил Ермаков"
+							sizes="(min-width: 1200px) 25vw, (min-width: 768px) 50vw, 100vw" 
+							/>
 							<div>
 								<h3 class="team-list__subtitle">Михаил Ермаков</h3>
 								<p lang="en" class="team-list__text">UI Designer</p>
@@ -385,7 +406,7 @@
 						</li>
 					</ul>
 				</div>
-			</section>-->
+			</section>
 			<!--Постоянные клиенты-->
 			<!--<section class="clients section">
 				<div class="container">
