--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@
 					<ul class="team-list">
 						<li class="team-list__item">
 							<img 
-							srcset="./images/team/demyanenko-1x.jpg 1x, ./images/team/demyanenko-2x.jpg 2x"
-							src="./images/team/demyanenko-1x.jpg" 
+							srcset="./images/team/demyanenko.jpg 1x, ./images/team/demyanenko@2x.jpg 2x"
+							src="./images/team/demyanenko.jpg" 
 							alt="Игорь Демьяненко" 
-							sizes="(min-width: 1200px) 25vw, (min-width: 768px) 50vw, 100vw"/>
+							/>
 							<div>
 								<h3 class="team-list__subtitle">Игорь Демьяненко</h3>
 								<p lang="en" class="team-list__text">Product Designer</p>
@@ -276,10 +276,10 @@
 						</li>
 						<li class="team-list__item">
 							<img 
-							srcset="./images/team/repina-1x.jpg 1x, ./images/team/repina-2x.jpg 2x"
-							src="./images/team/repina-1x.jpg" 
+							srcset="./images/team/repina.jpg 1x, ./images/team/repina@2x.jpg 2x"
+							src="./images/team/repina.jpg" 
 							alt="Ольга Репина" 
-							sizes="(min-width: 1200px) 25vw, (min-width: 768px) 50vw, 100vw"/>
+							>
 							<div>
 								<h3 class="team-list__subtitle">Ольга Репина</h3>
 								<p lang="en" class="team-list__text">Frontend Developer</p>
@@ -319,10 +319,10 @@
 						</li>
 						<li class="team-list__item">
 							<img 
-							srcset="./images/team/tarasov-1x.jpg 1x, ./images/team/tarasov-2x.jpg 2x" 
-							src="./images/team/tarasov-1x.jpg" 
+							srcset="./images/team/tarasov.jpg 1x, ./images/team/tarasov@2x.jpg 2x" 
+							src="./images/team/tarasov.jpg" 
 							alt="Николай Тарасов" 
-							sizes="(min-width: 1200px) 25vw, (min-width: 768px) 50vw, 100vw"/>
+							/>
 							<div>
 								<h3 class="team-list__subtitle">Николай Тарасов</h3>
 								<p lang="en" class="team-list__text">Marketing</p>
@@ -362,10 +362,10 @@
 						</li>
 						<li class="team-list__item">
 							<img 
-							srcset="./images/team/ermakov-1x.jpg 1x, ./images/team/ermakov-2x.jpg 2x"
-							src="./images/team/ermakov-1x.jpg" 
+							srcset="./images/team/ermakov.jpg 1x, ./images/team/ermakov@2x.jpg 2x"
+							src="./images/team/ermakov.jpg" 
 							alt="Михаил Ермаков"
-							sizes="(min-width: 1200px) 25vw, (min-width: 768px) 50vw, 100vw" 
+							 
 							/>
 							<div>
 								<h3 class="team-list__subtitle">Михаил Ермаков</h3>
@@ -408,7 +408,7 @@
 				</div>
 			</section>
 			<!--Постоянные клиенты-->
-			<!--<section class="clients section">
+			<section class="clients section">
 				<div class="container">
 					<h2 class="clients__title">Постоянные клиенты</h2>
 
@@ -463,12 +463,12 @@
 					</ul>
 				</div>
 			</section>
-		</main>-->
+		</main>
 
 		<!-- Подвал -->
-		<!--<footer class="footer">
+		<footer class="footer">
 			<div class="footer__container container">
-				<div class="address-container">
+				<div class="footer-address-container">
 					<a href="./index.html" class="footer__logo logo">
 						Web<span class="logo--white">Studio</span>
 					</a>
@@ -492,10 +492,10 @@
 							</li>
 						</ul>
 					</address>
-				</div>-->
+				</div>
 				<!-- Социальные сети-->
 
-				<!--<section class="footer-join ">
+				<section class="footer-join ">
 					<h3 class="footer-join__title">присоединяйтесь</h3>
 
 					<ul class="social-list">
@@ -531,9 +531,9 @@
 							</a>
 						</li>
 					</ul>
-				</section>-->
+				</section>
 				<!-- Подписка на рассылку -->
-				<!--<section class="footer-subscribe">
+				<section class="footer-subscribe">
 					<h2 class="footer-subscribe__title">Подпишитесь на рассылку</h2>
 				<form action="#" class="subscribe-form" autocomplete="on" >
 					
@@ -549,7 +549,7 @@
 		</section>
 				</form>
 			</div>
-		</footer>-->
+		</footer>
 		<!--Модальное окно-->
 		<div class="backdrop is-hidden" data-modal>
 			<div class="modal">
