--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 							<div>
 								<h3 class="team-list__subtitle">Игорь Демьяненко</h3>
 								<p lang="en" class="team-list__text">Product Designer</p>
-								<ul class="social-list">
+								<ul class="social-list social-list--indent">
 									<li class="social-list__item">
 										<a class="social-list__link " href="">
 											<svg class="social-list__icon" width="20" height="20">
@@ -326,7 +326,7 @@
 							<div>
 								<h3 class="team-list__subtitle">Николай Тарасов</h3>
 								<p lang="en" class="team-list__text">Marketing</p>
-								<ul class="social-list">
+								<ul class="social-list  social-list--indent">
 									<li class="social-list__item">
 										<a class="social-list__link " href="">
 											<svg class="social-list__icon" width="20" height="20">
@@ -370,7 +370,7 @@
 							<div>
 								<h3 class="team-list__subtitle">Михаил Ермаков</h3>
 								<p lang="en" class="team-list__text">UI Designer</p>
-								<ul class="social-list">
+								<ul class="social-list  social-list--indent">
 									<li class="social-list__item">
 										<a class="social-list__link " href="">
 											<svg class="social-list__icon" width="20" height="20">
