add href social-list

--- a/index.html
+++ b/index.html
@@ -505,7 +505,8 @@
 
 					<ul class="social-list">
 						<li class="social-list__item">
-							<a class="social-list__link social-footer social-footer--dark " href="">
+							<a class="social-list__link social-footer social-footer--dark " href="https://www.instagram.com/" target="_blank"
+									rel="nofollow">
 								<svg class="social-footer__icon" width="20" height="20">
 									<use href="./images/icons.svg#instagram"></use>
 								</svg>
@@ -513,7 +514,8 @@
 						</li>
 
 						<li class="social-list__item">
-							<a class="social-list__link social-footer social-footer--dark" href="">
+							<a class="social-list__link social-footer social-footer--dark" href="https://twitter.com/"  target="_blank"
+									rel="nofollow">
 								<svg class="social-footer__icon" width="20" height="20">
 									<use href="./images/icons.svg#twitter"></use>
 								</svg>
@@ -521,7 +523,8 @@
 						</li>
 
 						<li class="social-list__item">
-							<a class="social-list__link social-footer social-footer--dark" href="">
+							<a class="social-list__link social-footer social-footer--dark" href="https://m.facebook.com/" target="_blank"
+									rel="nofollow">
 								<svg class="social-footer__icon " width="20" height="20">
 									<use href="./images/icons.svg#facebook"></use>
 								</svg>
@@ -529,7 +532,8 @@
 						</li>
 
 						<li class="social-list__item">
-							<a class="social-list__link social-footer social-footer--dark" href="">
+							<a class="social-list__link social-footer social-footer--dark" href="https://www.linkedin.com/" target="_blank"
+									rel="nofollow">
 								<svg class="social-footer__icon" width="20" height="20">
 									<use href="./images/icons.svg#linkedin"></use>
 								</svg>
