--- a/portfolio.html
+++ b/portfolio.html
@@ -464,7 +464,7 @@
 					<h2 class="footer-subscribe__title">Подпишитесь на рассылку</h2>
 				<form action="#"  autocomplete="on" class="subscribe-form">
 					
-					<input type="email" name="email" placeholder="E-mail" autofocus required class="subscribe-form__mail"/>
+					<input type="email" name="email" placeholder="E-mail"  required class="subscribe-form__mail"/>
 
 					<button type="submit" class="subscribe-btn">
 						<span class="subscribe-btn__text">Подписаться</span>
