--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
 					<h2 class="footer-subscribe__title">Подпишитесь на рассылку</h2>
 				<form action="#"  autocomplete="on" class="subscribe-form">
 					
-					<input type="email" name="email" placeholder="E-mail" autofocus required class="subscribe-form__mail"/>
+					<input type="email" name="email" placeholder="E-mail"  required class="subscribe-form__mail"/>
 
 					<button type="submit" class="subscribe-btn">
 						<span class="subscribe-btn__text">Подписаться</span>
@@ -581,7 +581,7 @@
 			
 			<label for="user-name" class="modal__label">Имя</label>
 			<div class="modal-field">
-			<input type="text" name="name" id="user-name" class="modal-field__input" autofocus required/>
+			<input type="text" name="name" id="user-name" class="modal-field__input"  required/>
 			<svg class="modal-field__icon" width="18" height="18">
 				<use href="./images/icons.svg#icon-person-black"></use>
 			</svg>
@@ -591,7 +591,7 @@
 			
 				<label for="user-tel" class="modal__label">Телефон</label>
 				<div class="modal-field modal-field--indent">
-					<input type="tel" name="tel" id="user-tel" class="modal-field__input" autofocus required/>
+					<input type="tel" name="tel" id="user-tel" class="modal-field__input"  required/>
 					<svg class="modal-field__icon" width="18" height="18">
 						<use href="./images/icons.svg#icon-phone-black"></use>
 					</svg>
@@ -601,7 +601,7 @@
 			
 				<label for="user-email" class="modal__label">Почта</label>
 				<div class="modal-field">
-					<input type="email" name="email" id="user-email" class="modal-field__input" autofocus/>
+					<input type="email" name="email" id="user-email" class="modal-field__input" required/>
 					<svg class="modal-field__icon" width="18" height="18">
 						<use href="./images/icons.svg#icon-email-black"></use>
 					</svg>
